# predictive-casestudy

./: .gitignore  .~lock.CaseStudy16_Presentation.pptx#  CaseStudy16_Presentation.pptx  README.md  app.py  main.py  pyproject.toml
src/: __init__.py  data.py  eda.py  models.py
