[project]
name = "predictive-casestudy"
version = "0.2.0"
description = "Rossmann Store Sales — multi-model time-series forecasting case study with Streamlit UI"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26,<2.0",
    "pandas>=2.1",
    "pillow>=10.0",
    "scikit-learn>=1.4",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "streamlit>=1.36",
    "plotly>=5.22",
    "prophet>=1.1.5",
    "xgboost>=2.0",
    "holidays>=0.50",
    "joblib>=1.4",
]
